[gd_scene load_steps=17 format=3 uid="uid://2dkervu4bu1t"]

[ext_resource type="Script" path="res://Interface/Spells/spells_container.gd" id="1_lpjxu"]
[ext_resource type="PackedScene" uid="uid://rwtg2deoxrpw" path="res://Interface/Spells/physic_spells_container.tscn" id="2_6m1ql"]
[ext_resource type="PackedScene" uid="uid://dfvjhw5v6tqqi" path="res://Interface/Spells/spell_icon.tscn" id="3_650rv"]
[ext_resource type="Texture2D" uid="uid://bjmhhctyhstwy" path="res://Images/distraction.svg" id="4_dmh1c"]
[ext_resource type="Texture2D" uid="uid://cxg2m8bs73g7y" path="res://Images/despair.svg" id="5_pt27a"]
[ext_resource type="Texture2D" uid="uid://06cu1lrddk0j" path="res://Images/apathy.svg" id="6_ibnlf"]
[ext_resource type="Texture2D" uid="uid://dfwb44j6p8bsq" path="res://Images/insanity.svg" id="7_yoidp"]
[ext_resource type="PackedScene" uid="uid://5t6pedxsmio8" path="res://Interface/Spells/dark_spells_container.tscn" id="8_2cxep"]
[ext_resource type="Texture2D" uid="uid://tfjk4la481al" path="res://Images/necromancy.svg" id="9_v3xee"]
[ext_resource type="Texture2D" uid="uid://b2s7bpqubb8ah" path="res://Images/decay.svg" id="10_hp6bi"]
[ext_resource type="PackedScene" uid="uid://cgoruox14c6q8" path="res://Interface/Spells/elemental_spells_container.tscn" id="11_6icyh"]
[ext_resource type="Texture2D" uid="uid://bgddauvuhvol7" path="res://Images/roots.svg" id="12_yyx1n"]
[ext_resource type="PackedScene" uid="uid://cyfmv12fv07vq" path="res://Interface/Spells/faith_spells_container.tscn" id="13_5d8c2"]
[ext_resource type="Texture2D" uid="uid://bjyhksgfv1d81" path="res://Images/blindness.svg" id="14_aa2eb"]
[ext_resource type="Texture2D" uid="uid://cr2fu62smc8ja" path="res://Images/divinity_hammer.svg" id="15_l5bg1"]
[ext_resource type="Texture2D" uid="uid://ihldty8weqf2" path="res://Images/selectial_support.svg" id="16_tc5wt"]

[node name="SpellsContainer" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_top = 1.0
offset_right = 543.0
offset_bottom = 564.0
script = ExtResource("1_lpjxu")

[node name="PhysicSpellsContainer" parent="." instance=ExtResource("2_6m1ql")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1
columns = 3

[node name="DominationSpell" parent="PhysicSpellsContainer" instance=ExtResource("3_650rv")]
layout_mode = 2
spell_name = "domination"

[node name="DistractionSpell" parent="PhysicSpellsContainer" instance=ExtResource("3_650rv")]
layout_mode = 2
texture = ExtResource("4_dmh1c")
spell_name = "distraction"

[node name="DespairSpell" parent="PhysicSpellsContainer" instance=ExtResource("3_650rv")]
layout_mode = 2
texture = ExtResource("5_pt27a")
spell_name = "despair"

[node name="ApathySpell" parent="PhysicSpellsContainer" instance=ExtResource("3_650rv")]
layout_mode = 2
texture = ExtResource("6_ibnlf")
spell_name = "apathy"

[node name="InsanitySpell" parent="PhysicSpellsContainer" instance=ExtResource("3_650rv")]
layout_mode = 2
texture = ExtResource("7_yoidp")
spell_name = "insanity"

[node name="DarkSpellsContainer" parent="." instance=ExtResource("8_2cxep")]
visible = false
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1
columns = 3

[node name="NecromancySpell" parent="DarkSpellsContainer" instance=ExtResource("3_650rv")]
layout_mode = 2
texture = ExtResource("9_v3xee")
spell_name = "necromancy"

[node name="DecaySpell" parent="DarkSpellsContainer" instance=ExtResource("3_650rv")]
layout_mode = 2
texture = ExtResource("10_hp6bi")
spell_name = "decay"

[node name="ElementalSpellsContainer" parent="." instance=ExtResource("11_6icyh")]
visible = false
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1
columns = 3

[node name="RootsSpell" parent="ElementalSpellsContainer" instance=ExtResource("3_650rv")]
layout_mode = 2
texture = ExtResource("12_yyx1n")
spell_name = "roots"

[node name="FaithSpellsContainer" parent="." instance=ExtResource("13_5d8c2")]
visible = false
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1
columns = 3

[node name="BlindnessSpell" parent="FaithSpellsContainer" instance=ExtResource("3_650rv")]
layout_mode = 2
texture = ExtResource("14_aa2eb")
spell_name = "blindness"

[node name="DivineHammerSpell" parent="FaithSpellsContainer" instance=ExtResource("3_650rv")]
layout_mode = 2
texture = ExtResource("15_l5bg1")
spell_name = "divine_hammer"

[node name="SelestialSupportSpell" parent="FaithSpellsContainer" instance=ExtResource("3_650rv")]
layout_mode = 2
texture = ExtResource("16_tc5wt")
spell_name = "selestial_support"

[node name="SpellInfoContainer" type="ColorRect" parent="."]
visible = false
custom_minimum_size = Vector2(200, 200)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.647059, 0.647059, 0.647059, 1)

[node name="SpellName" type="Label" parent="SpellInfoContainer"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -44.0
offset_right = 44.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Spell Name"

[node name="SpellSchoolLabel" type="Label" parent="SpellInfoContainer"]
layout_mode = 0
offset_top = 35.0
offset_right = 40.0
offset_bottom = 58.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Spell School:"

[node name="SpellSchoolValue" type="Label" parent="SpellInfoContainer"]
layout_mode = 0
offset_left = 102.0
offset_top = 35.0
offset_right = 199.0
offset_bottom = 58.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Elemental"

[node name="SpellDescription" type="Label" parent="SpellInfoContainer"]
layout_mode = 0
offset_top = 65.0
offset_right = 198.0
offset_bottom = 130.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 12
text = "This is the description of the spell"
autowrap_mode = 3
